--- a/index.html
+++ b/index.html
@@ -3,42 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Email Template</title>
 </head>
 <body>
-    <form align="center">
-        <p><input type="text" name="firstName" placeholder="enter first name" required></p>
-        <p><input type="text" name="LastName" placeholder="enter last name" required></p>
-        <p><input type="email" name="userEmail" placeholder="Enter Email id"></p>
-         <p><input type="password" name="" placeholder="Enter password"></p>
-         <p>
-            <input type="radio" name="g" value="male">male
-            <input type="radio" name="g" value="female">female
-         </p>
-        <p>
-            <input type="checkbox" name="a">html
-            <input type="checkbox" name="a">css
-            <input type="checkbox" name="a">javascript
-            <input type="checkbox" name="a">reactjs
-        </p>
-        <p>
-            <select name="opp" id="opp">
-                <option value="1">Tech1</option>
-                <option value="2">Tech2</option>
-                <option value="3">Tech3</option>
-                <option value="4">Tech4</option>
-            </select>
-        </p>
-         <p><input type="date" name ="dob"></p>
-         <p><input type="time" name="time"></p>
-         <p><input type="color" name="color"></p>
-         <p><input type="file" name="file"></p>
-         <p><input type="tel" name="phone" placeholder="enter phone number"></p>
-         <p><input type="number" name="q" placeholder="enter product..... "></p>
-         <p><input type="search" name="srch" placeholder="enter item.."></p>
-         <p><input type="range" name="area"></p>
+    <table border="0" width="40%" align="center">
+        <tr><td colspan="2" align="left">
+            <h1>&nbsp;Learn MernStack</h1>
+           </td>
+       </tr>
+        <tr>
+            <td colspan="2" align="center">
+                <img src="https://tse3.mm.bing.net/th/id/OIP.CpU4-nlviGfH1eEWiEEWqwHaEK?pid=Api&P=0&h=180" alt="😊" width="100%">
+               <p align="justify"> Learn MERN Stack - MongoDB, Express.js, React, and Node.js - to build full-stack web applications. Ideal for developers aiming to create modern and dynamic web solutions</p>
+               <a href=""> <h2>Start now</h2></a>
+            </td>
+        </tr>
 
-         <p><input type="submit" name="reg" value="register now"></p>
-    </form>
+        <tr>
+            <td colspan="2"> 
+                <h1>React, NodeJS, Express & MongoDB - The MERN Fullstack Guide.</h1>
+                <p align="justify">Unlock the power of React, Node.js, Express, and MongoDB in this complete MERN Fullstack Guide.
+                 Build real-world web apps from scratch, understand backend & frontend integration, and become job-ready with hands-on projects and practical experience.
+                 Whether you're a beginner or leveling up, this guide will help you build dynamic, full-featured applications with ease.</p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <h2>
+                    Learn something
+                </h2>
+                <img src="https://tse2.mm.bing.net/th/id/OIP.fUjMIljIXFm7Q5gOyE_EwQHaFL?pid=Api&P=0&h=180" alt="😊">
+                <p>Join our Online Learning Community</p>
+            </td>
+            <td>
+                <h2>
+                    Learn something
+                </h2>
+                <img src="https://tse2.mm.bing.net/th/id/OIP.2ZY6_dTCqtDRtH4z9xpqcwHaEK?pid=Api&P=0&h=180" alt="😊">
+                <p>mern stack couse for free</p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <h2>
+                    Learn something
+                </h2>
+                <img src="https://tse1.mm.bing.net/th/id/OIP.IhGijgoVTEs0_4rPuUXboQHaE8?pid=Api&P=0&h=180" alt="😊">
+                <p align="justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id odit accusamus magni eos voluptate repudiandae fugit laudantium enim saepe nemo!</p>
+            </td>
+            <td>
+                <h2>
+                    Learn something
+                </h2>
+                <img src="https://tse3.mm.bing.net/th/id/OIP.qXUroKqn_1sfVL_tUPAA4wHaEK?pid=Api&P=0&h=180" alt="😊">
+                <p align="justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo error earum consequuntur libero, sunt unde sapiente cumque id nam consequatur.</p>
+            </td>
+        </tr>
+      
+
+    </table>
 </body>
 </html>
