--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        </tr>
         <tr>
             <td colspan="2" align="center">
-                <img src="https://tse3.mm.bing.net/th/id/OIP.CpU4-nlviGfH1eEWiEEWqwHaEK?pid=Api&P=0&h=180" alt="😊" width="100%">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7s8jgunlzu9RHZlpQDsmht3vHqCYFmWk4eg&s" alt="😊" width="100%">
                <p align="justify"> Learn MERN Stack - MongoDB, Express.js, React, and Node.js - to build full-stack web applications. Ideal for developers aiming to create modern and dynamic web solutions</p>
                <a href=""> <h2>Start now</h2></a>
             </td>
@@ -33,7 +33,7 @@
                 <h2>
                     Learn something
                 </h2>
-                <img src="https://tse2.mm.bing.net/th/id/OIP.fUjMIljIXFm7Q5gOyE_EwQHaFL?pid=Api&P=0&h=180" alt="😊">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7s8jgunlzu9RHZlpQDsmht3vHqCYFmWk4eg&s" alt="😊">
                 <p>Join our Online Learning Community</p>
             </td>
             <td>
