--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
              <td colspan="5" height="100px" bgcolor="black"> <font color="white"> <h1>&nbsp;&nbsp; My website</h1> </font></td>
         </tr>
         <tr  align="center" bgcolor="gold" height="40px" >
-            <td width="20%"><a href="home1.html" > <font color="red"> HOME </font></a></td>
-            <td width="20%"><a href="home2.html" > <font color="red"> HOME </font></a></td>
-            <td width="20%"><a href="home3.html" > <font color="red"> HOME </font></a></td>
+            <td width="20%"><a href="home1.html" > <font color="red"> HOME1 </font></a></td>
+            <td width="20%"><a href="home2.html" > <font color="red"> HOME2 </font></a></td>
+            <td width="20%"><a href="home3.html" > <font color="red"> HOME3 </font></a></td>
             <td width="20%"><a href="home4.html" > <font color="red"> HOME </font></a></td>
             <td width="20%"><a href="home5.html" > <font color="red"> HOME </font></a></td>
         </tr>
