--- a/home5.html
+++ b/home5.html
@@ -11,37 +11,39 @@
     <table border="1" cellspacing="0" align="center">
         <tr>
             <td colspan="5" height="100px" bgcolor="black">
-                <a href="./"></a>
                 <font color="white">
-                    <h1 >&nbsp;&nbsp; My website</a></h1>
+                    <h1>&nbsp;&nbsp; My website</h1>
                 </font>
             </td>
         </tr>
         <tr align="center" bgcolor="gold" height="40px">
             <td width="20%"><a href="home1.html">
-                    <font color="red"> PAGE 1 </font>
+                    <font color="red">PAGE 1 </font>
                 </a></td>
             <td width="20%"><a href="home2.html">
-                    <font color="red"> PAGE 2 </font>
+                    <font color="red"> PAGE 2</font>
                 </a></td>
             <td width="20%"><a href="home3.html">
-                    <font color="red"> PAGE 3 </font>
+                    <font color="red">PAGE 3 </font>
                 </a></td>
             <td width="20%"><a href="home4.html">
-                    <font color="red"> PAGE 4 </font>
+                    <font color="red">PAGE 4 </font>
                 </a></td>
             <td width="20%"><a href="home5.html">
-                    <font color="red"> PAGE 5 </font>
+                    <font color="red"> PAGE 5</font>
                 </a></td>
         </tr>
         <tr height="550px">
             <td colspan="4">
-                        <table border="0" cellspacing="0" width="100%" height="450px">
-                            <tr>
-                                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1fYUJTGP_7VICM1ogQKKOLASmTGkRWfXM3g&s" alt="😊" height="100%" width="100%"></td>
-                                
-                            </tr>
-                        </table>
+                <table border="0" cellspacing="0" width="100%" height="150px">
+                    <tr>
+                        <td><img src="https://img.freepik.com/premium-photo/close-up-leaf-dark-background-generative-ai_797840-2176.jpg" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/premium-photo/close-up-leaf-dark-background-generative-ai_797840-2176.jpg" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/premium-photo/close-up-leaf-dark-background-generative-ai_797840-2176.jpg" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/premium-photo/close-up-leaf-dark-background-generative-ai_797840-2176.jpg" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/premium-photo/close-up-leaf-dark-background-generative-ai_797840-2176.jpg" alt="😊" height="100%" width="100%"></td>
+                    </tr>
+                </table>
                 <hr>
                 <p align="justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error earum consectetur
                     esse consequatur iusto. Mollitia sit suscipit nemo voluptatem iure sequi quos voluptate.
@@ -62,11 +64,22 @@
                     Sunt, dolore! Optio debitis vero quae animi ab velit sapiente iure mollitia? Enim dolorum magni
                     nobis delectus quisquam perspiciatis, nulla explicabo neque maiores doloremque error ut impedit
                     omnis dolorem at animi, necessitatibus quidem quas libero pariatur quos similique recusandae? Unde,
-                    ipsum.</p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, at eum magnam temporibus quam alias
+                     amet architecto veritatis neque! Nulla quibusdam delectus illum sequi quisquam, fugiat voluptatum quaerat
+                      quis quas.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem laudantium, obcaecati quia ab quod
+                     nobis quam suscipit voluptas, corrupti dolor magni nisi aspernatur saepe, eius dolorem itaque repellat culpa
+                     . Nostrum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eaque quis voluptate dolorem libero 
+                     recusandae mollitia pariatur itaque quibusdam labore, vel maxime magni sunt alias iste provident praesentium 
+                     error architecto!Loremlorem
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ratione aperiam dicta vero nam quaerat magni itaque,
+                      exercitationem, voluptates veritatis placeat eveniet ullam totam sint numquam repellendus, labore recusandae? Illum?
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius eaque explicabo dolorem tenetur non quis! Ipsam corporis
+                       necessitatibus accusamus facere eligendi. Odit itaque id nisi facere, suscipit doloremque labore laborum.</p>
 
             </td>
             <td valign="top">
-                <img src="https://media.istockphoto.com/id/1280385511/photo/colorful-background.jpg?s=612x612&w=0&k=20&c=kj0PRQlgvWLzA1-1me6iZp5mlwsZhC4QlcvIEb1J1bs="
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1fYUJTGP_7VICM1ogQKKOLASmTGkRWfXM3g&s"
                     alt="😊" width="100%" height="350px">
                 <hr>
                 <marquee behavior="alternate" direction="right" scrollamount="5"> this is aside </marquee>
