--- a/home4.html
+++ b/home4.html
@@ -11,37 +11,38 @@
     <table border="1" cellspacing="0" align="center">
         <tr>
             <td colspan="5" height="100px" bgcolor="black">
-                <a href="./"></a>
                 <font color="white">
-                    <h1 >&nbsp;&nbsp; My website</a></h1>
+                    <h1>&nbsp;&nbsp; My website</h1>
                 </font>
             </td>
         </tr>
         <tr align="center" bgcolor="gold" height="40px">
             <td width="20%"><a href="home1.html">
-                    <font color="red"> PAGE 1 </font>
+                    <font color="red"> PAGE 1</font>
                 </a></td>
             <td width="20%"><a href="home2.html">
-                    <font color="red"> PAGE 2 </font>
+                    <font color="red"> PAGE 2</font>
                 </a></td>
             <td width="20%"><a href="home3.html">
-                    <font color="red"> PAGE 3 </font>
+                    <font color="red"> PAGE 3</font>
                 </a></td>
             <td width="20%"><a href="home4.html">
-                    <font color="red"> PAGE 4 </font>
+                    <font color="red"> PAGE 4</font>
                 </a></td>
             <td width="20%"><a href="home5.html">
-                    <font color="red"> PAGE 5 </font>
+                    <font color="red"> PAGE 5</font>
                 </a></td>
         </tr>
         <tr height="550px">
             <td colspan="4">
-                        <table border="0" cellspacing="0" width="100%" height="450px">
-                            <tr>
-                                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1fYUJTGP_7VICM1ogQKKOLASmTGkRWfXM3g&s" alt="😊" height="100%" width="100%"></td>
-                                
-                            </tr>
-                        </table>
+                <table border="0" cellspacing="0" width="100%" height="250px">
+                    <tr>
+                        <td><img src="https://img.freepik.com/free-photo/wet-sphere-reflective-water-abstract-beauty-generated-by-ai_188544-19616.jpg?semt=ais_hybrid&w=740" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/free-photo/wet-sphere-reflective-water-abstract-beauty-generated-by-ai_188544-19616.jpg?semt=ais_hybrid&w=740" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/free-photo/wet-sphere-reflective-water-abstract-beauty-generated-by-ai_188544-19616.jpg?semt=ais_hybrid&w=740" alt="😊" height="100%" width="100%"></td>
+                        <td><img src="https://img.freepik.com/free-photo/wet-sphere-reflective-water-abstract-beauty-generated-by-ai_188544-19616.jpg?semt=ais_hybrid&w=740" alt="😊" height="100%" width="100%"></td>
+                    </tr>
+                </table>
                 <hr>
                 <p align="justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error earum consectetur
                     esse consequatur iusto. Mollitia sit suscipit nemo voluptatem iure sequi quos voluptate.
@@ -66,7 +67,7 @@
 
             </td>
             <td valign="top">
-                <img src="https://media.istockphoto.com/id/1280385511/photo/colorful-background.jpg?s=612x612&w=0&k=20&c=kj0PRQlgvWLzA1-1me6iZp5mlwsZhC4QlcvIEb1J1bs="
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1fYUJTGP_7VICM1ogQKKOLASmTGkRWfXM3g&s"
                     alt="😊" width="100%" height="350px">
                 <hr>
                 <marquee behavior="alternate" direction="right" scrollamount="5"> this is aside </marquee>
